fixed navbar jump links

--- a/src/index.css
+++ b/src/index.css
@@ -29,16 +29,6 @@
   }
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
 body {
   width: 100%;
   margin: 0;
@@ -100,24 +90,25 @@ marquee{
 
 nav{
   margin: 10px;
-  /* background-color: #fff; */
   padding: 15px;
-  /* border: 2px solid #000; */
 }
 
-nav button{
+nav a{
   margin: 15px;
   border: 2px solid #ff0000;
   border-radius: 0;
   color:#000;
+  background-color: #fff;
   text-decoration: none;
   padding: 5px 10px;
   transition: transform 0.2s ease-in-out;
 }
 
-nav button:hover{
+nav a:hover{
+  padding: 15px;
   transform: scale(1.2);
   color: red;
+  font-size: 20px;
   background-color: #000;
   border: 2px solid #ff0000;
 }
@@ -166,9 +157,16 @@ td{
   border: none;
 }
 
+.topten button:hover{
+  transform: scale(1.2);
+  color: red;
+  background-color: #000;
+  border: 2px solid #ff0000;
+}
+
 footer{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 20px;
   font-size: 12px;
   color: #fff;
